WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274266
REGRESSION (
278815@main
): [ MacOS iOS Debug ] TestWebKitAPI.AdvancedPrivacyProtections.AddNoiseToWebAudioAPIs is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=274266
Summary
REGRESSION (278815@main): [ MacOS iOS Debug ] TestWebKitAPI.AdvancedPrivacyPr...
Jay Stfleur
Reported
2024-05-16 10:31:06 PDT
Description: TestWebKitAPI.AdvancedPrivacyProtections.AddNoiseToWebAudioAPIs Is a consistent failure o n Ventura+ and iOS after changes one
278817@main
Buildbot URL:
https://build.webkit.org/#/builders/949/builds/2901/steps/19/logs/stdio
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AdvancedPrivacyProtections.AddNoiseToWebAudioAPIs&style=debug
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-16 10:31:32 PDT
<
rdar://problem/128209071
>
Diego Pino
Comment 2
2024-05-17 01:18:40 PDT
According to:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AdvancedPrivacyProtections.AddNoiseToWebAudioAPIs&style=debug
The test passed in
278812@main
, but failed in
278817@main
. The chart doesn't show test results for the interval: [
278813@main
,
278816@main
]. Exploring that range, the changeset
278815@main
seems more related to this test regression.
https://github.com/WebKit/WebKit/commit/775bac300c8b006803ba1d5c2f7bf28a0f77bc69
Wenson Hsieh
Comment 3
2024-05-17 07:58:17 PDT
Oh, I see — this is hitting a debug-only assertion that we shouldn't be fast-mallocing, seemingly because: 1. The noise injection mechanism now allocates some amount of memory in the process of mapping all equal values to the same noisy value. 2. There's some logic in web audio code that uses `ForbidMallocUseForCurrentThreadScope` to enforce no allocations, for performance reasons. Since this codepath is only triggered for private browsing and we already take a slight performance hit for noise injection before these mitigations, I think it's safe to deploy a `DisableMallocRestrictionsForCurrentThreadScope` here to suppress the debug assertion.
Wenson Hsieh
Comment 4
2024-05-17 07:58:17 PDT
Comment hidden (obsolete)
Oh, I see — this is hitting a debug-only assertion that we shouldn't be fast-mallocing, seemingly because: 1. The noise injection mechanism now allocates some amount of memory in the process of mapping all equal values to the same noisy value. 2. There's some logic in web audio code that uses `ForbidMallocUseForCurrentThreadScope` to enforce no allocations, for performance reasons. Since this codepath is only triggered for private browsing and we already take a slight performance hit for noise injection before these mitigations, I think it's safe to deploy a `DisableMallocRestrictionsForCurrentThreadScope` here to suppress the debug assertion.
Wenson Hsieh
Comment 5
2024-05-17 09:29:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28715
Wenson Hsieh
Comment 6
2024-05-17 15:17:28 PDT
Comment hidden (obsolete)
Pull request:
https://github.com/WebKit/WebKit/pull/28741
EWS
Comment 7
2024-05-17 20:45:16 PDT
Committed
278945@main
(1e5a82de122e): <
https://commits.webkit.org/278945@main
> Reviewed commits have been landed. Closing PR #28715 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug