REGRESSION (278815@main): [ MacOS iOS Debug ] TestWebKitAPI.AdvancedPrivacyProtections.AddNoiseToWebAudioAPIs is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=274266 rdar://128209071

Reviewed by NOBODY (OOPS!).

Allocations are forbidden here for performance reasons:

```
void AudioDestinationNode::renderQuantum(…)
{
    …

    // For performance reasons, we forbid heap allocations while doing rendering on the audio thread.
    // Heap allocations that cannot be avoided or have not been fixed yet can be allowed using
    // DisableMallocRestrictionsForCurrentThreadScope scope variables.
    ForbidMallocUseForCurrentThreadScope forbidMallocUse;
```

…but in private browsing mode, we intentionally inject random noise into the audio buffer upon
readback at the cost of performance, in order to make it significantly more difficult to infer
details about the underlying OS or hardware through a Web Audio fingerprint.

Refactor this code so that the noise multiplier table is a `std::array` that's only allocated once
(in the initial call to `applyNoise`), and reuse it on subsequent requests to apply noise.

* Source/WebCore/platform/ThreadGlobalData.cpp:
(WebCore::ThreadGlobalData::initializeAudioNoiseInjectionMultiplierTable):
* Source/WebCore/platform/ThreadGlobalData.h:
(WebCore::ThreadGlobalData::audioNoiseInjectionMultiplierTable):
* Source/WebCore/platform/audio/AudioUtilities.cpp:
(WebCore::AudioUtilities::applyNoise):